# ml-sandbox

./: README.md
.github/: dependabot.yml  pull_request_tamplate.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: pr_agent.yml  python-lint.yml
common/: README.md  pyproject.toml
common/data/: amazon_reviews_dataset.py
common/utils/: metrics.py
sasrec/: Makefile  README.md  pyproject.toml  train.py
sasrec/data/: dataset.py
sasrec/models/: sasrec.py
sasrec/models/modules/: transformer_embedding.py  transformer_encoder_block.py
sasrec/notebook/: dataset.ipynb  metric.ipynb
sasrec/tests/test_utils/: test_utils.py
sasrec/utils/: metrics.py  utils.py
sentiment_analysis/: README.md  pyproject.toml
sequential_recommendation/: README.md  debug.py  train.py
sequential_recommendation/config/: const.py
sequential_recommendation/data/: dataset.py
sequential_recommendation/models/: README.md  cafe.py  gsasrec.py  locker.py  sasrec.py
sequential_recommendation/models/modules/: transformer_embedding.py  transformer_encoder_block.py
sequential_recommendation/notebook/: dataset.ipynb  metadata.ipynb
sequential_recommendation/tests/test_models/: test_gsasrec.py  test_sasrec.py  test_transfomer_encoder_block.py
sequential_recommendation/utils/: utils.py
transfomer/: Makefile  README.md
transfomer/models/: classifier.py
two_tower_recommendation/: README.md  pyproject.toml  train.py
two_tower_recommendation/config/: const.py
two_tower_recommendation/data/: dataset.py
two_tower_recommendation/models/: README.md  two_tower.py  two_tower_info_nce.py
two_tower_recommendation/notebooks/: dataset.ipynb
two_tower_recommendation/utils/: logging.py  metrics.py  utils.py
two_tower_recommendation/utils/common/: logging.py  (+2 more)
(+5 files in other folders)
